# mvinstaller

./: .gitignore  LICENSE  README.md  Redistribution_Notice.md  metadata_list.xml  mvinstaller.spec  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check-addons-update.yml  release.yml
addon_metadata/: Arclualib.xml  ArclualibRU.xml  BeamMasterWBH_RU.xml  BoonSelectorRU.xml  Eschaton_GenesisRU.xml  EternalVerseRU.xml  ExtraCapacity.xml  ExtraCapacityRU.xml  FishingRU.xml  GenGibs.xml  GenGibsDD.xml  GenGibsDD_RU.xml  GenGibsFR.xml  GenGibsFR_RU.xml  GenGibsMV.xml  GenGibsMV_RU.xml  GenGibsTRC.xml  GenGibsTRC_RU.xml  HereBeMarkersPlusRU.xml  HereBeMarkersRU.xml  InstantCloneAndHeal.xml  InstantCloneAndHealRU.xml  ItBHUD_RU.xml  JBO_RU.xml  LilysInnovationsRU.xml  LizzardAchEN.xml  LizzardAchRU.xml  MoreManSys.xml  MoreManSysRU.xml  NoHardModeScrap.xml  NoHardModeScrapRU.xml  RSS_RU.xml  SlocknogsFlagship.xml  SpeedUI_RU.xml  TRC.xml  TRC_ko.xml  TheHolidaySpecial.xml  TradingRU.xml  UniversalWeaponMod.xml  UniversalWeaponMod_RU.xml  (+2 more)
locale/de/: main.ftl
locale/en/: main.ftl
locale/es/: main.ftl
locale/fr/: main.ftl
locale/it/: main.ftl
locale/ja/: main.ftl
locale/ko/: main.ftl
locale/pl/: main.ftl
locale/pt_BR/: main.ftl
locale/ru/: main.ftl
mvinstaller/: __init__.py  __main__.py  actions.py  addon_metadata.py  config.py  fstools.py  ftlpath.py  last_installed_mods.py  localetools.py  multiverse.py  signatures.py  translated_mods.py  util.py  webtools.py
mvinstaller/ui/: aboutdialog.py  app.py  appbar.py  busycontainer.py  configdialog.py  errorsnackbar.py  ftlpathfinderdialog.py  infoscheme.py  installmodsdialog.py  operationcard.py  progressdialog.py
snippets/: bump_version.py  execute.py  fetch_metadata.py
