[tool.poetry]
name = "mvinstaller"
version = "0.4.1"
description = "Automatically provides modded environment for the game FTL."
authors = ["nedsociety <nedsociety@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
flet = "^0.8.4"
"fluent.runtime" = "^0.4.0"
requests = "^2.28.2"
javaproperties = "^0.8.1"
vdf = "^3.4"
dacite = "^1.8.0"
Babel = "^2.12.1"
loguru = "^0.7.0"
lxml = "^4.9.2"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
