[tool.poetry]
name = "mvinstaller"
version = "0.5.1"
description = "Automatically provides modded environment for the game FTL."
authors = ["nedsociety <nedsociety@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
flet = "^0.9.0"
"fluent.runtime" = "^0.4.0"
requests = "^2.31.0"
javaproperties = "^0.8.1"
vdf = "^3.4"
dacite = "^1.8.1"
Babel = "^2.12.1"
loguru = "^0.7.1"
lxml = "^4.9.3"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
